Fix minor notices, form spacing, admin navigation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+
+
 .locale {
   float: right;
   margin: -0.25em 0.1em;
@@ -39,9 +41,7 @@
   form {
 
     label {
-      width: 5em;
-      float: left;
-      text-align: right;
+
       padding-top: 0.2em;
       margin-right: 0.1em;
       display: block;
